assignment3/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: netpol-test
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: nginx
