assignment3/database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database
  namespace: netpol-test
  labels:
    app: database
spec:
  containers:
  - name: database
    image: nginx
