assignment3/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: netpol-test
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: nginx
