assignment3/frontend-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress-backend
  namespace: netpol-test
spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
  - Egress

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 80
